# qemu

hw/slate/: Kconfig  board.c  meson.build  nema.c  nema.h  ram_disp.c  ram_disp.h  slate_utils.c  slate_utils.h  timer.c  timer.h
